--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <h1 class="projects__h1">Проекты</h1>
         <ul id="project-list" class="projects-list"></ul>
       </section>
+      <section class="technology">
+        <h1 class="technology-title">Технологии</h1>
+        <ul class="technology-list"></ul>
+      </section>
     </main>
     <footer class="footer"><h1>footer</h1></footer>
   </body>
