--- a/index.html
+++ b/index.html
@@ -81,6 +81,34 @@
       </section>
     </main>
     <!-- И последний блок footer, в нем должны быть контактные данные, какие-либо ссылки, лицензия(если есть) -->
-    <footer class="footer"><h1>footer</h1></footer>
+    <footer class="footer container">
+      <div class="footer-contacts">
+        <a href="tel:+79502866283">+7 (950) 286-62-83</a>
+        <a href="mailto:anton.nurgaliev@mail.ru">anton.nurgaliev@mail.ru</a>
+      </div>
+   <div class="social-link">
+        <a href="">
+          <img
+            src="./assets/images/github.svg"
+            alt="Github"
+            class="social-link__image"
+          />
+        </a>
+        <a href="">
+          <img
+            src="./assets/images/linkedIn.svg"
+            alt="linkedIn"
+            class="social-link__image"
+          />
+        </a>
+        <a href="">
+          <img
+            src="./assets/images/figma.svg"
+            alt="figma"
+            class="social-link__image"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
