--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Подключаем стили -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Подключаем скрипы -->
-    <script defer src="./assets/js/index.js"></script>
+    <script defer type="module" src="./assets/js/index.js"></script>
     <!-- Заголовок сайта -->
     <title>Frontend-developer portfolio</title>
   </head>
