--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <!-- Тег nav семантически нужен для обозначения навигации сайта -->
       <nav class="header-nav">
         <li class="header-nav__item"><a href="/">Projects</a></li>
-        <li class="header-nav__item"><a href="/">Technologies</a></li></a>
-        <li class="header-nav__item"><a href="/">About me</a></li></a>
+        <li class="header-nav__item"><a href="/">Technologies</a></li>
+        <li class="header-nav__item"><a href="/">About me</a></li>
       </nav>
       <div class="social-link">
         <a href="">
@@ -79,6 +79,35 @@
         <!-- Технологии задаются динамически с помощью JavaScript -->
         <ul class="technology-list"></ul>
       </section>
+      <section class="about">
+        <h1>Обо мне</h1>
+        <div class="about__timeline-block">
+          <hr class="about-timeline" />
+          <div class="about-card">
+            <h3>2018</h3>
+            <div class="about-circle"></div>
+            <p>Скитался по горам и ел травку.</p>
+          </div>
+          <div class="about-card">
+            <h3>2018</h3>
+            <div class="about-circle"></div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reprehenderit ab vitae dolorem odit veniam quas deserunt nesciunt,
+              placeat dignissimos possimus!
+            </p>
+          </div>
+          <div class="about-card">
+            <h3>2018</h3>
+            <div class="about-circle"></div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reprehenderit ab vitae dolorem odit veniam quas deserunt nesciunt,
+              placeat dignissimos possimus!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- И последний блок footer, в нем должны быть контактные данные, какие-либо ссылки, лицензия(если есть) -->
     <footer class="footer container">
@@ -86,7 +115,7 @@
         <a href="tel:+79502866283">+7 (950) 286-62-83</a>
         <a href="mailto:anton.nurgaliev@mail.ru">anton.nurgaliev@mail.ru</a>
       </div>
-   <div class="social-link">
+      <div class="social-link">
         <a href="">
           <img
             src="./assets/images/github.svg"
