--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         </a>
       </div>
     </header>
+    <header class="menu-burger">
+      <label class="menu-label" for="menu-check"><span></span></label>
+      <input type="checkbox" name="burger" id="menu-check" />
+      <div class="menu-box">burger</div>
+    </header>
     <!-- Главный блок main с контентом разделяется еще на секции с тегами section -->
     <!-- Здесь указывается дополнительный класс container для отступов от краев -->
     <main class="main container">
