--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Подключаем скрипы -->
     <script defer type="module" src="./assets/js/index.js"></script>
+    <script defer type="module" src="./assets/js/study.js"></script>
+    <script defer type="module" src="./assets/js/about.js"></script>
     <!-- Заголовок сайта -->
     <title>Frontend-developer portfolio</title>
   </head>
@@ -87,13 +89,15 @@
       <section class="about">
         <h1>Обо мне</h1>
         <div class="about__timeline-block">
-          <hr class="about-timeline" />
-          <div class="about-card">
+          <div class="about__block-timeline">
+            <hr class="about-timeline" />
+          </div>
+          <article class="about-card">
             <h3>2018</h3>
             <div class="about-circle"></div>
             <p>Скитался по горам и ел травку.</p>
-          </div>
-          <div class="about-card">
+          </article>
+          <article class="about-card">
             <h3>2018</h3>
             <div class="about-circle"></div>
             <p>
@@ -101,8 +105,8 @@
               Reprehenderit ab vitae dolorem odit veniam quas deserunt nesciunt,
               placeat dignissimos possimus!
             </p>
-          </div>
-          <div class="about-card">
+          </article>
+          <article class="about-card">
             <h3>2018</h3>
             <div class="about-circle"></div>
             <p>
@@ -110,7 +114,7 @@
               Reprehenderit ab vitae dolorem odit veniam quas deserunt nesciunt,
               placeat dignissimos possimus!
             </p>
-          </div>
+          </article>
         </div>
       </section>
     </main>
